vcluster_versioned_docs/version-0.26.0/configure/vcluster-yaml/sync/to-host/core/pods/README.mdx
---
title: Pods
sidebar_label: pods
sidebar_position: 1
description: Configuration for ...
---

import DisableResourceWarning from '../../../../../../_fragments/hints/warning-do-not-disable-resource.mdx'
import Patches from '../../../../../../_fragments/patches.mdx'
import SyncPods from '../../../../../../_partials/config/sync/toHost/pods.mdx'

By default, this is enabled.

Sync all [Pod](https://kubernetes.io/docs/concepts/workloads/pods/) resources, including ephemeral containers, from the virtual cluster to the host cluster.

{/*
`pods.enabled`:
- covered by the generic section here: https://www.vcluster.com/docs/syncer/config#enable-or-disable-synced-resources

`pods.translateImage`:
- This seems to have existed from the beginning, and only referenced here: https://www.vcluster.com/docs/config-reference

```
translateImage:
  “nginx/nginx”: “my-image/custom-nginx”
```

`pods.enforceTolerations`:
- This was requested / implemented by a community member here: https://github.com/loft-sh/vcluster/issues/330
- This can be used to schedule vCluster pods to dedicated host nodes. Basically you can configure nodes with a "taint" and then make the vCluster pods "tolerate" the taint. Adds the taint to all Pods created from the virtual cluster.



`pods.useSecretsForSATokens`:
- Old documentation link: https://www.vcluster.com/docs/security/other-topics#secret-based-service-account-tokens
In order for the Pod to be able to communicate with the virtual clusters API, it requires a Service Account Token.
If you don't want to create these secrets in the host cluster, you can disable it and then add annotations to the pods which then get mounted as a file.

`pods.rewriteHosts`:
- This was previously the `--overide-hosts` option mentioned here: https://www.vcluster.com/docs/config-reference
- This seems to have existed from the beginning

If enabled, vCluster overrides a containers /etc/hosts file if there is a subdomain specified for the pod (spec.subdomain). (default true)

*/}
### Automatically apply tolerations to all pods synced by vCluster

Kubernetes has a concept of [Taints and Tolerations](https://kubernetes.io/docs/concepts/scheduling-eviction/taint-and-toleration/), which is used for controlling scheduling.
If you have a use case that requires vCluster to sync all pods and automatically set a toleration on those pods, then you can achieve this with the `enforceTolerations` option. You can pass multiple toleration expressions, and  the syncer adds them to every new pod that vCluster syncs.

```YAML
sync:
  toHost:
    pods:
      enabled: true
      enforceTolerations:
        - example-key=example-value:NoSchedule
        - another-key:PreferNoSchedule
```

:::info
vCluster does not support setting the `tolerationSeconds` field of a toleration. If your use case requires this, open an issue in [the vCluster repo on GitHub](https://github.com/loft-sh/vcluster/issues).
:::

### Replace container images when pods are synced

If certain images used within the virtual cluster are not accessible in the host cluster due to registry restrictions or security policies, `translateImage` can map these to equivalent, permitted images in the host cluster's registry.

```YAML
sync:
  toHost:
    pods:
      enabled: true
      translateImage:
        "virtualcluster/image:tag": "hostcluster/alternative-image:tag"
```

## Patches

<Patches resource="pods" path="spec.containers[*].name" direction="toHost"  />

## Use secrets for ServiceAccount tokens

A host Pod requires a ServiceAccount token to communicate with the virtual clusters API. If you don't want to create these secrets in the host cluster, disable this option. vCluster then adds annotations to the pods.

## Config reference
<DisableResourceWarning/>

<SyncPods/>

