vcluster_versioned_docs/version-0.37.0/configure/vcluster-yaml/sync/to-host/core/pods/README.mdx
---
title: Pods
sidebar_label: Overview
sidebar_position: 0
sidebar_class_name: host-nodes
slug: /configure/vcluster-yaml/sync/to-host/core/pods
---

import DisableResourceWarning from '../../../../../../_fragments/hints/warning-do-not-disable-resource.mdx'
import SyncPods from '../../../../../../_partials/config/sync/toHost/pods.mdx'
import TenancySupport from '../../../../../../_fragments/tenancy-support.mdx';

<TenancySupport hostNodes="true" />

By default, this is enabled.

Sync all [Pod](https://kubernetes.io/docs/concepts/workloads/pods/) resources, including ephemeral containers, from the tenant cluster to the control plane cluster.

{/*
`pods.enabled`:
- covered by the generic section here: https://www.vcluster.com/docs/syncer/config#enable-or-disable-synced-resources

`pods.translateImage`:
- This seems to have existed from the beginning, and only referenced here: https://www.vcluster.com/docs/config-reference

```
translateImage:
  “nginx/nginx”: “my-image/custom-nginx”
```

`pods.enforceTolerations`:
- This was requested / implemented by a community member here: https://github.com/loft-sh/vcluster/issues/330
- This can be used to schedule vCluster pods to dedicated host nodes. Basically you can configure nodes with a "taint" and then make the vCluster pods "tolerate" the taint. Adds the taint to all Pods created from the virtual cluster.


`pods.useSecretsForSATokens`:
- Old documentation link: https://www.vcluster.com/docs/security/other-topics#secret-based-service-account-tokens
In order for the Pod to be able to communicate with the virtual clusters API, it requires a Service Account Token.
If you don't want to create these secrets in the host cluster, you can disable it and then add annotations to the pods which then get mounted as a file.

`pods.rewriteHosts`:
- This was previously the `--overide-hosts` option mentioned here: https://www.vcluster.com/docs/config-reference
- This seems to have existed from the beginning

If enabled, vCluster overrides a containers /etc/hosts file if there is a subdomain specified for the pod (spec.subdomain). (default true)

*/}
### Automatically apply tolerations to all pods synced by vCluster

Kubernetes has a concept of [Taints and Tolerations](https://kubernetes.io/docs/concepts/scheduling-eviction/taint-and-toleration/), which is used for controlling scheduling.
If you have a use case that requires vCluster to sync all pods and automatically set a toleration on those pods, then you can achieve this with the `enforceTolerations` option. You can pass multiple toleration expressions, and  the syncer adds them to every new pod that vCluster syncs.

```YAML
sync:
  toHost:
    pods:
      enabled: true
      enforceTolerations:
        - example-key=example-value:NoSchedule
        - another-key:PreferNoSchedule
```

:::info
vCluster does not support setting the `tolerationSeconds` field of a toleration. If your use case requires this, open an issue in [the vCluster repo on GitHub](https://github.com/loft-sh/vcluster/issues).
:::

### Replace container images when pods are synced

If certain images used within the tenant cluster are not accessible in the control plane cluster due to registry restrictions or security policies, `translateImage` can map these to equivalent, permitted images in the control plane cluster's registry.

```YAML
sync:
  toHost:
    pods:
      enabled: true
      translateImage:
        "virtualcluster/image:tag": "hostcluster/alternative-image:tag"
```

## Patches

Use `sync.toHost.pods.patches` to transform Pod fields, such as `spec.containers[*].name`, while syncing to the control plane cluster. See [Patching synced resources](../../../patching/README.mdx) for syntax, directionality, and examples.

## Use secrets for ServiceAccount tokens

A host Pod requires a ServiceAccount token to communicate with the tenant cluster's API. If you don't want to create these secrets in the control plane cluster, disable this option. vCluster then adds annotations to the pods.

## Rewrite hosts

Applies only to Pods that have the field `spec.subdomain` set.
In such Pods, the fqdn hostname (`hostname -f`) is constructed based on the control plane cluster namespace the vCluster runs in.
This is usually not what applications expect as they are unaware of the control plane cluster.

If this option is enabled, vCluster injects an initContainer to override the Pod's `/etc/hosts` file to change the fqdn hostname to match the expected domain.

:::note Configuration change
In vCluster version `0.27.0`, the `rewriteHosts.initContainer.image` configuration changed from a string to an object format. This change provides granular control over the registry, repository, and tag of the image.

For more information on the new object structure, see the [configuration reference](#pods-rewriteHosts-initContainer).
:::

## Config reference
<DisableResourceWarning/>

<SyncPods/>
